<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_section_my_exercise">Exercise</string>
    <string name="title_section_training_set">The set of training</string>
    <string name="title_section_schedule">Schedule</string>
    <string name="title_sport_map">Sport map</string>
    <string name="title_section_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_load_page_sport_timer">Sport Timer</string>
    <string name="hello_world">Hello world!</string>
    <string name="press_twice">Press once again to exit!</string>

    <!-- Action Bar -->
    <string name="action_edit">Edit mode</string>
    <string name="action_add">Add item</string>
    <string name="action_refresh">Refresh</string>

    <!-- exercise adapter -->
    <string name="step">step(s)</string>

    <!-- training adapter -->
    <string name="exercise_step">exercise(s)</string>

    <!-- screen_add_exercise -->
    <string name="create_your_training">Create your training</string>

    <!-- SportTimerActivity -->
    <string name="app_name">ShareSport</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="exercise_is_not_set">Exercise has not been set</string>
    <string name="current_exercise">Current exercise</string>
    <string name="choose_training_exercise">Choose training exercise</string>
    <string name="null_time">00:00:00.000</string>
    <string name="null_time_small">00:00:00</string>
    <string name="training_exercise">Training exercise</string>
    <string name="repeat_button">Repeat training</string>
    <string name="title_activity_preference">PreferenceActivity</string>

    <!-- TrainingExerciseActivity -->
    <string name="add_training_exercise">Add a new training exercise</string>
    <string name="update_exercise">Edit</string>
    <string name="exit">Exit</string>
    <string name="choose_exercise">Choose</string>
    <string name="copy_exercise">Copy</string>
    <string name="delete_exercise">Delete</string>
    <string name="rename_exercise">Rename</string>

    <!-- ExerciseSettingsActivity -->
    <string name="add_exercise">Add a new exercise</string>

    <!-- For Preferences -->
    <string name="notification_mode">Notification mode preferences</string>
    <string name="is_sound_notification">Sound notification</string>
    <string name="detail_pref_sound_notification">To launch sound notification</string>
    <string name="is_vibrate_notification">Vibration</string>
    <string name="detail_pref_vibrate_notification">To use vibration</string>
    <string name="time_mode">Time mode preferences</string>
    <string name="give_notice_time">Give notice time</string>
    <string name="id_of_current_exercise">Id of current exercise</string>
    <string name="detail_pref_give_notice_time">Time until еру end of training exercise for give notice (per seconds)</string>
    <string name="title_activity_training_exercise">TrainingExerciseActivity</string>
    <string name="title_activity_exercise_settings">ExerciseSettingsActivity</string>

    <!-- Dialogs -->
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="ok_text">OK</string>
    <string name="save_text">Save</string>
    <string name="edit_text">Edit</string>
    <string name="cancel_text">Cancel</string>
    <string name="write_exercise_name">Exercise name:</string>
    <string name="write_item_name">Item name:</string>
    <string name="hint_write_exercise_name">Write name of exercise</string>
    <string name="hint_write_item_name">Write name of item</string>
    <string name="set_the_time">Set the time</string>
    <string name="delete_element">Delete element(s)?</string>
    <string name="HH">HH</string>
    <string name="MM">MM</string>
    <string name="SS">SS</string>


    <!-- Trainings -->
    <string name="trainings_my_list">My list</string>
    <string name="trainings_store">Store</string>
    <string name="trainings_today">Today</string>

    <!-- Drawer -->
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_edit_training">EditTrainingActivity</string>
    <string name="title_activity_interval_timer">IntervalTimerActivity</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>

</resources>
