<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/notification_mode">
        <CheckBoxPreference
            android:title="@string/is_sound_notification"
            android:summary="@string/detail_pref_sound_notification" 
            android:key="@string/is_sound_notification"/>
        
        <CheckBoxPreference
            android:title="@string/is_vibrate_notification"
            android:summary="@string/detail_pref_vibrate_notification" 
            android:key="@string/is_vibrate_notification"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/time_mode">
        <ListPreference
            android:key="@string/give_notice_time"
            android:title="@string/give_notice_time"
            android:summary="@string/detail_pref_give_notice_time"
            android:defaultValue="5"
            android:entries="@array/array_give_notice_preference"
            android:entryValues="@array/array_give_notice_preference"
            android:dialogTitle="Choose text style"/>
    </PreferenceCategory>
</PreferenceScreen>