<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.taktilidu.sporttimer.StartSportTimer" >

    <item
        android:id="@+id/action_edit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_edit_white"
        android:title="@string/action_edit"/>
    
    <item
        android:id="@+id/action_add"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_newcoaching_white"
        android:title="@string/action_add"/>
    
    <item
        android:id="@+id/action_refresh"
        app:showAsAction="ifRoom"
        android:orderInCategory="200"
        android:icon="@drawable/ic_action_refresh_white"
        android:title="@string/action_refresh"/>

</menu>
