<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/write_item_name" />

    <EditText
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_write_item_name" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <NumberPicker
                android:id="@+id/NumberPicker01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:width="100dp" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/NumberPicker01"
                android:gravity="center_horizontal"
                android:text="@string/HH" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center" >

            <NumberPicker
                android:id="@+id/NumberPicker02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:width="100dp" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/NumberPicker02"
                android:gravity="center_horizontal"
                android:text="@string/MM" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="right" >

            <NumberPicker
                android:id="@+id/NumberPicker03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:width="100dp" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/NumberPicker03"
                android:gravity="center_horizontal"
                android:text="@string/SS" />

        </RelativeLayout>
    </RelativeLayout>

     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ok_item_exercise_button"
            style="?android:attr/absListViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="" />

        <Button
            android:id="@+id/cancel_item_exercise_button"
            style="?android:attr/absListViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/cancel_text" />

    </LinearLayout>
    

</LinearLayout>